[project]
name = "rest-api-with-python-and-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=3.2.4,<3.3",
    "djangorestframework>=3.12.4,<3.13",
    "drf-spectacular>=0.15.1,<0.16",
    "psycopg2-binary>=2.9.11",
]
